package unicrm.domain;
public enum CourseCategory {
    MAJOR, MINOR, FREE_ELECTIVE
}
