package unicrm.domain;
public enum Language {
    KZ, EN, RU
}
