package unicrm.domain;
public enum ManagerType {
    OR, DEPARTMENT
}
