package unicrm.domain;
public enum TeacherType {
    TUTOR, LECTOR, SENIOR_LECTOR, PROFESSOR
}
